add image rgb stacked

--- a/analysis/led_location_analysis.ipynb
+++ b/analysis/led_location_analysis.ipynb
@@ -135,6 +135,15 @@
    "outputs": [],
    "source": [
     "def data_iterator(show_progress: bool = False):\n",
+    "    \"\"\"\n",
+    "    Iterates over all data files in the render folder path and yields the data in each file.\n",
+    "    \n",
+    "    Args:\n",
+    "        show_progress: Whether to show a progress bar.\n",
+    "        \n",
+    "    Yields:\n",
+    "        dict: The data in each data file.\n",
+    "    \"\"\"\n",
     "    render_folder_paths = os.listdir(RENDER_FOLDER_PATH)\n",
     "\n",
     "    if show_progress:\n",
@@ -158,11 +167,29 @@
     "        bar.close()\n",
     "\n",
     "def frame_data_iterator(show_progress: bool = False):\n",
+    "    \"\"\"\n",
+    "    Iterates over all frame data in the data files and yields the frame data in each file.\n",
+    "    \n",
+    "    Args:\n",
+    "        show_progress: Whether to show a progress bar.\n",
+    "        \n",
+    "    Yields:\n",
+    "        dict: The frame data in each data file.\n",
+    "    \"\"\"\n",
     "    for data in data_iterator(show_progress=show_progress):\n",
     "        for frame_data in data.values():\n",
     "            yield frame_data\n",
     "\n",
     "def led_data_iterator(show_progress=False):\n",
+    "    \"\"\"\n",
+    "    Iterates over all LED data in the frame data and yields the LED data in each frame.\n",
+    "    \n",
+    "    Args:\n",
+    "        show_progress: Whether to show a progress bar.\n",
+    "        \n",
+    "    Yields:\n",
+    "        dict: The LED data in each frame.\n",
+    "    \"\"\"\n",
     "    for frame_data in frame_data_iterator(show_progress=show_progress):\n",
     "        for led_data in frame_data.values():\n",
     "            yield led_data"
