clean and refactorize utility and config files

--- a/notebooks/background.ipynb
+++ b/notebooks/background.ipynb
@@ -32,7 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from src.background_image.random_background_image_generator import RandomBackgroundImageGenerator\n",
-    "from src.utils.config import RENDER_RESOLUTION"
+    "from src.utils import RENDER_RESOLUTION"
    ]
   },
   {
