--- a/notebooks/led_location_analysis.ipynb
+++ b/notebooks/led_location_analysis.ipynb
@@ -26,7 +26,7 @@
     "from matplotlib.patches import Circle\n",
     "from matplotlib.collections import PatchCollection\n",
     "\n",
-    "from src.utils.config import RENDER_FOLDER_PATH\n",
+    "from src.utils import RENDER_FOLDER_PATH\n",
     "\n",
     "HEATMAP_WIDTH = 100\n",
     "HEATMAP_HEIGHT = 100"
